--- a/style.css
+++ b/style.css
@@ -65,6 +65,22 @@ body {
     cursor: pointer;
 }
 
+#res-of-query{
+    margin: 0 auto;
+    max-width: 1000px; 
+    background-color: aliceblue;
+    padding-left: 3%;
+    padding-right: 3%;
+    box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+    -moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+    -webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+}
+
+h1{
+    text-shadow: 5px 1px 8px rgba(0, 0, 0, 0.65);
+    color: #000000;
+    font-size: 20px;
+}
 
 
 
